--- a/i3/config
+++ b/i3/config
@@ -33,6 +33,9 @@ font pango:Clear Sans 10
 ########## Autolaunch ##########
 exec --no-startup-id nm-applet
 exec --no-startup-id /usr/lib64/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id compton -i .85 -cCzG -t-3 -l-5 -r4 \
+ --config /dev/null --backend xrender \
+ --unredir-if-possible
 exec --no-startup-id nitrogen --restore &
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
@@ -225,7 +228,7 @@ bindsym Mod4+r mode "resize"
 
 ########## Styling ##########
 
-client.focused          #404552 #404552 #fafafa #ff5757 #fafafa
+client.focused          #404552 #404552 #fafafa #ff5757 #222222
 client.focused_inactive #666666 #404552 #eeeeee #666666 #666666
 client.unfocused        #404552 #484b52 #eeeeee #ff5757 #404552
 client.urgent           #ff5757 #404552 #ffffff #555757 #404552
@@ -233,7 +236,7 @@ client.background       #404552
 
 ########## i3-gaps integration ##########
 
-for_window [class="^.*"] border pixel 5
+for_window [class="^.*"] border pixel 3
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [title="Preferences$"] floating enable
