--- a/polybar/config
+++ b/polybar/config
@@ -50,7 +50,7 @@ font-4 = FontAwesome5Brands:style=Solid:pixelsize=10:antialias=false;3
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = filesystem volume xkeyboard memory cpu temperature date
+modules-right = filesystem volume xkeyboard memory cpu temperature date eth powermenu
 
 tray-position = right
 tray-padding = 2
@@ -81,10 +81,10 @@ blacklist-0 = num lock
 
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-#format-prefix-underline = ${colors.secondary}
+;format-prefix-underline = ${colors.secondary}
 
 label-layout = %layout%
-#label-layout-underline = ${colors.secondary}
+;label-layout-underline = ${colors.secondary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
@@ -194,7 +194,7 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-#format-underline = #f90000
+;format-underline = #f90000
 label = %percentage%%
 
 [module/memory]
@@ -202,7 +202,7 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-#format-underline = #4bffdc
+;format-underline = #4bffdc
 label = %percentage_used%%
 
 [module/wlan]
@@ -229,11 +229,11 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = eth1
+interface = enp0s25
 interval = 3.0
 
-format-connected-underline = #55aa55
-format-connected-prefix = " "
+;format-connected-underline = #55aa55
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -255,9 +255,9 @@ date-alt = "%d.%m.%Y - %H:%M:%S"
 
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-#format-underline = #0a6cf5
+;format-underline = #0a6cf5
 
-label = %date% %time%
+label = %date% %time%Uhr
 
 [module/volume]
 type = internal/volume
@@ -320,9 +320,9 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp><label>
-#format-underline = #f50a4d
+;format-underline = #f50a4d
 format-warn = <ramp><label-warn>
-#format-warn-underline = ${self.format-underline}
+;format-warn-underline = ${self.format-underline}
 
 label = %temperature%
 label-warn = %temperature%
@@ -338,11 +338,11 @@ type = custom/menu
 
 expand-right = true
 
-format-spacing = 1
+format-spacing = 2
 
-label-open = 
+label-open = ""
 label-open-foreground = ${colors.secondary}
-label-close =  cancel
+label-close = ""
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
@@ -355,10 +355,10 @@ menu-0-1-exec = menu-open-2
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = poweroff --reboot
 
 menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
+menu-2-0-exec = poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
