--- a/polybar/config
+++ b/polybar/config
@@ -271,13 +271,13 @@ format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+bar-volume-foreground-0 = #0a81f5
+bar-volume-foreground-1 = #0a81f5
+bar-volume-foreground-2 = #0a81f5
+bar-volume-foreground-3 = #0a81f5
+bar-volume-foreground-4 = #0a81f5
+bar-volume-foreground-5 = #0a81f5
+bar-volume-foreground-6 = #0a81f5
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
