--- a/i3/config
+++ b/i3/config
@@ -242,6 +242,6 @@ for_window [window_role="task_dialog"] floating enable
 for_window [title="Preferences$"] floating enable
 
 smart_borders no_gaps
-smart_gaps on
+#smart_gaps on
 gaps inner 50
 gaps outer 0
