--- a/rofi/config
+++ b/rofi/config
@@ -1,17 +1,17 @@
 rofi.fullscreen: true
 rofi.color-enabled: true
-rofi.color-window: argb:e8222D32,argb:00292f37,#EBCB8B
-rofi.color-normal: argb:02000000,#D8DEE9,argb:02000000,argb:02000000,#EBCB8B
-rofi.color-active: argb:02000000,#D8DEE9,argb:02000000,argb:02000000,#EBCB8B
-rofi.color-urgent: argb:02000000,#D8DEE9,argb:02000000,argb:02000000,#EBCB8B
+rofi.color-window: argb:e8222D32,argb:00292f37,#00b0ef
+rofi.color-normal: argb:02000000,#D8DEE9,argb:02000000,argb:02000000,#00b0ef
+rofi.color-active: argb:02000000,#D8DEE9,argb:02000000,argb:02000000,#00b0ef
+rofi.color-urgent: argb:02000000,#D8DEE9,argb:02000000,argb:02000000,#00b0ef
 
-rofi.font: System San Francisco Display 14
+rofi.font: System San Francisco Display 18
 rofi.eh: 1
 rofi.line-margin: 20
 rofi.separator-style: solid
 rofi.hide-scrollbar: true
 rofi.lines: 3
 rofi.width: 100
-rofi.padding: 200
+rofi.padding: 400
 rofi.bw: 0
 rofi.show-icons: true
