--- a/i3/config
+++ b/i3/config
@@ -218,32 +218,25 @@ bindsym Mod4+r mode "resize"
 #        status_command i3status
 #        position top
 #
-#        colors {
-#            background #404552
 #
-#            focused_workspace #3685e2 #3685e2 #fafafa
-#            active_workspace #5294e2 #5294e2 #fafafa
-#            inactive_workspace #404552 #404552 #fafafa
-#            urgent_workspace #ff5757 #ff5757 #fafafa
-#        }
 #}
 
 ########## Styling ##########
-
-client.focused          #404552 #404552 #fafafa #5C627C #5C627C
-client.focused_inactive #666666 #404552 #eeeeee #666666 #666666
-client.unfocused        #404552 #484b52 #eeeeee #ff5757 #000000
-client.urgent           #ff5757 #404552 #ffffff #555757 #404552
 client.background       #404552
 
 ########## i3-gaps integration ##########
 
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 1
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [title="Preferences$"] floating enable
 
 smart_borders no_gaps
 #smart_gaps on
-gaps inner 50
+gaps inner 5
 gaps outer 0
+
+client.focused #00b0ef #00b0ef #141414 #ff7066
+client.focused_inactive #141414 #141414 #00b0ef #472b2a
+client.unfocused #141414 #141414 #7d7d7d #141414
+client.urgent #ff7066 #ff7066 #141414 #ff7066
