--- a/i3/config
+++ b/i3/config
@@ -41,7 +41,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 bindsym Mod4+o exec pkill compton && compton -i .85 --active-opacity 0.85 -cCzG -t-3 -l-5 -r4 --config /dev/null --backend xrender --unredir-if-possible & i3-msg restart
 bindsym Mod4+p exec pkill compton && compton -i .85 --active-opacity 1.00 -cCzG -t-3 -l-5 -r4 --config /dev/null --backend xrender --unredir-if-possible & i3-msg restart
-
+bindsym Mod4+n exec ~/.config/networkmanager-dmenu/networkmanager_dmenu
 bindsym Mod4+Shift+s exec i3lock # Easier locking
 
 ### Backlight ###
@@ -230,6 +230,7 @@ for_window [class="^.*"] border pixel 1
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [title="Preferences$"] floating enable
+for_window [class="Nm-connection-editor"] floating enable
 
 smart_borders no_gaps
 #smart_gaps on
