--- a/polybar/config
+++ b/polybar/config
@@ -21,6 +21,7 @@ darkgrey = #444
 
 [spacing]
 adjust-icon = 2
+module-spacing = 4
 
 [bar/bar]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -41,10 +42,10 @@ border-bottom-size = 0
 border-color = #222
 
 padding-left = 0
-padding-right = 4
+padding-right = ${spacing.module-spacing}
 
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = ${spacing.module-spacing}
 
 font-0 = fixed:pixelsize=10;1
 font-1 = siji:pixelsize=10;1
