--- a/i3/config
+++ b/i3/config
@@ -237,7 +237,12 @@ smart_borders no_gaps
 gaps inner 50
 gaps outer 0
 
-client.focused #00b0ef #00b0ef #141414 #F12570
-client.focused_inactive #141414 #141414 #00b0ef #472b2a
-client.unfocused #141414 #141414 #7d7d7d #141414
+# client.focused #00b0ef #00b0ef #141414 #F12570
+# client.focused_inactive #141414 #141414 #00b0ef #472b2a
+# client.unfocused #141414 #141414 #7d7d7d #141414
+# client.urgent #F12570 #F12570 #141414 #F12570
+
+client.focused #141414 #141414 #141414 #141414
+client.focused_inactive #141414 #141414 #00b0ef #141414 
+client.unfocused #141414 #141414 #141414 #141414
 client.urgent #F12570 #F12570 #141414 #F12570
