--- a/i3/config
+++ b/i3/config
@@ -19,6 +19,12 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# multi monitor support with the nVidia driver
+force_xinerama yes
+
+# focus following the mouse is annoying
+focus_follows_mouse no
+
 # Variable setting
 set $defaultmod Mod4
 set $up i
@@ -33,14 +39,10 @@ font pango:Clear Sans 10
 ########## Autolaunch ##########
 exec --no-startup-id nm-applet
 exec --no-startup-id /usr/lib64/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id compton -cCzG -t-3 -l-5 -r4 --config /dev/null --backend xrender --unredir-if-possible
 exec --no-startup-id nitrogen --restore &
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 ########## Keybindings ##########
-
-# bindsym Mod4+o exec pkill compton && compton -i .85 --active-opacity 0.85 -cCzG -t-3 -l-5 -r4 --config /dev/null --backend xrender --unredir-if-possible & i3-msg restart
-# bindsym Mod4+p exec pkill compton && compton -i .85 --active-opacity 1.00 -cCzG -t-3 -l-5 -r4 --config /dev/null --backend xrender --unredir-if-possible & i3-msg restart
 bindsym Mod4+n exec ~/.config/networkmanager-dmenu/networkmanager_dmenu
 bindsym Mod4+Shift+s exec i3lock # Easier locking
 
@@ -211,15 +213,6 @@ mode "resize" {
 }
 
 bindsym Mod4+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        status_command i3status
-#        position top
-#
-#
-#}
 
 ########## Styling ##########
 client.background       #404552
