--- a/i3/config
+++ b/i3/config
@@ -52,7 +52,7 @@ bindsym Mod4+Return exec i3-sensible-terminal
 bindsym Mod4+q kill
 
 # start rofi (a program launcher)
-bindsym Mod4+d exec rofi
+bindsym Mod4+d exec "rofi -combi-modi window,drun -show combi"
 
 # change focus
 bindsym Mod4+$left focus left
