--- a/polybar/config
+++ b/polybar/config
@@ -7,6 +7,7 @@ white = #fff
 lightred = #F12570
 lightblue = #00b0ef
 lightgreen = #50FA7B
+lightyellow = #ffd75f
 lightorange = #FF8C00
 lightgrey = #ddd
 
