--- a/i3/config
+++ b/i3/config
@@ -183,14 +183,11 @@ bindsym Mod4+r mode "resize"
 
 ########## Styling ##########
 
-# class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-
-client.background       #ffffff
+# class                 border    bg        text      indicator   child_border
+client.focused          #151718   #151718   #6A63CE   #6A63CE     #6A63CE
+client.focused_inactive #151718   #151718   #d0d0d0   #2c2e2f     #2c2e2f
+client.unfocused        #151718   #151718   #d0d0d0   #2c2e2f     #2c2e2f
+client.urgent           #151718   #151718   #e6cd69   #e6cd69
 
 ########## i3-gaps integration ##########
 
@@ -201,5 +198,5 @@ for_window [title="Preferences$"] floating enable
 
 smart_borders no_gaps
 # smart_gaps on
-gaps inner 50
+gaps inner 15
 gaps outer 0
